# cx-survey-platform

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE_PGLITE_HANDOFF.md  Database  Docs-legacy-review  FABLE5_ARCHITECTURE_AND_CODE_REVIEW_PROMPT.md  FABLE5_CX_PLATFORM_PROMPT.md  Frontend  README.md  SHA256SUMS.txt  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: ci.yml
app/: layout.tsx
apps/analytics/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt  vercel.json
apps/analytics/src/ok_analytics/: contracts.py  exports.py  frame.py  main.py  procedures_basic.py  procedures_inferential.py  registry.py  versions.py
apps/analytics/tests/: test_auth.py  test_exports.py  test_procedures.py
apps/web/: next.config.ts  package.json  playwright.config.ts  proxy.ts  vitest.config.ts
apps/web/lib/: auth.ts  (+11 more)
docs/: 20260723-luna-followup.md  20260723-route-error-audit.md  20260723-tenant-integrity-audit.md  analytics-container-hosting.md  architecture.md  cx-platform-build-and-qa-plan.md  github-vercel-implementation-runbook.md  hosted-role-and-rls.md  implementation-plan.md  owner-notes.md  panel-import-policy.md  qa-review-plan.md  source-capability-matrix.md
docs/adr/: 001-monorepo-and-stack.md  002-local-postgres-no-docker.md  003-auth-boundary.md  004-synchronous-jobs-with-durable-records.md  005-dataset-storage-inline-jsonb.md  006-import-consent-basis.md  007-anonymization-propagation-to-datasets.md  (+1 more)
scripts/: dev-db.mjs  dev-db.sh  dev-db.test.mjs  run-ts.mjs  ts-loader-hooks.mjs
(+126 files in other folders)
