[project]
name = "ok-analytics"
version = "0.1.0"
description = "OK CX Survey Platform — statistical analysis API and file adapters"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pydantic>=2.9",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "scikit-learn>=1.5",
    "pyreadstat>=1.2",
    "openpyxl>=3.1",
    "python-multipart>=0.0.32",
]

[dependency-groups]
dev = ["pytest>=8.3", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ok_analytics"]

[tool.vercel]
entrypoint = "ok_analytics.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
